lib_LTLIBRARIES 		= libnatspec.la
libnatspec_la_SOURCES	= get_charset.c get_locale.c enrich_fs_options.c convert.c filesystem.c \
	natspec.h data/get_charset_data.h
libnatspec_la_LDFLAGS 	= -Werror -version-info
#libdir 					= /lib
#-version-info 0:0:1
#-release 1

# devel
libnatspec_include_HEADERS 	= natspec.h
libnatspec_includedir 		= $(includedir)

