lib_LTLIBRARIES 		= libnatspechi.la
libnatspechi_la_SOURCES	= language.c natspechi.h
libnatspechi_la_LIBADD 		= $(top_srcdir)/lib/libnatspec.la
libnatspechi_la_CFLAGS		= -I$(top_srcdir)/lib
#libdir 					= /lib
#-version-info 0:0:1
#-release 1

# devel
libnatspechi_include_HEADERS 	= natspechi.h
libnatspechi_includedir 		= $(includedir)

